# -*- coding: utf-8 -*-
[metadata]
name = circbuf
author = Alain Péteut
author-email = alain.peteut@yahoo.com
summary = A fast, zero-copy, circular buffer for Python
descriptor-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python 3
    Programming Language :: Python 3.2
    Programming Language :: Python 3.3
    Programming Language :: Python 3.4

[files]
packages = circbuf
data_files =
    tox.ini = tox.ini

[nosetests]
verbosity = 2
detailed-errors = 1
with-xunit = 1
xunit-file = xunit.xml
with-coverage = 1
cover-package = circbuf
cover-xml = 1
cover-xml-file = coverage.xml
